// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store:ServiceStore 1`] = `
Object {
  "action": undefined,
  "busying": false,
  "checking": false,
  "childrenIds": Array [],
  "data": Object {},
  "dialogData": undefined,
  "dialogOpen": false,
  "disposed": false,
  "drawerData": undefined,
  "drawerOpen": false,
  "error": false,
  "fetching": false,
  "hasRemoteData": false,
  "id": "1",
  "initedAt": 0,
  "initializing": false,
  "loadingVisible": true,
  "msg": "",
  "parentId": "",
  "path": "",
  "pristine": Object {},
  "saving": false,
  "schema": null,
  "schemaKey": "",
  "storeType": "ServiceStore",
  "updatedAt": 0,
}
`;

exports[`store:ServiceStore fetchInitData failed 1`] = `
Array [
  Object {
    "action": undefined,
    "busying": false,
    "checking": false,
    "childrenIds": Array [],
    "data": Object {},
    "dialogData": undefined,
    "dialogOpen": false,
    "disposed": false,
    "drawerData": undefined,
    "drawerOpen": false,
    "error": false,
    "fetching": true,
    "hasRemoteData": false,
    "id": "1",
    "initedAt": 0,
    "initializing": false,
    "loadingVisible": true,
    "msg": "",
    "parentId": "",
    "path": "",
    "pristine": Object {},
    "saving": false,
    "schema": null,
    "schemaKey": "",
    "storeType": "ServiceStore",
    "updatedAt": 0,
  },
  Object {
    "action": undefined,
    "busying": false,
    "checking": false,
    "childrenIds": Array [],
    "data": Object {},
    "dialogData": undefined,
    "dialogOpen": false,
    "disposed": false,
    "drawerData": undefined,
    "drawerOpen": false,
    "error": false,
    "fetching": false,
    "hasRemoteData": false,
    "id": "1",
    "initedAt": 0,
    "initializing": false,
    "loadingVisible": true,
    "msg": "",
    "parentId": "",
    "path": "",
    "pristine": Object {},
    "saving": false,
    "schema": null,
    "schemaKey": "",
    "storeType": "ServiceStore",
    "updatedAt": 0,
  },
]
`;

exports[`store:ServiceStore fetchInitData success 1`] = `
Array [
  Object {
    "action": undefined,
    "busying": false,
    "checking": false,
    "childrenIds": Array [],
    "data": Object {},
    "dialogData": undefined,
    "dialogOpen": false,
    "disposed": false,
    "drawerData": undefined,
    "drawerOpen": false,
    "error": false,
    "fetching": true,
    "hasRemoteData": false,
    "id": "1",
    "initedAt": 0,
    "initializing": false,
    "loadingVisible": true,
    "msg": "",
    "parentId": "",
    "path": "",
    "pristine": Object {},
    "saving": false,
    "schema": null,
    "schemaKey": "",
    "storeType": "ServiceStore",
  },
  Object {
    "action": undefined,
    "busying": false,
    "checking": false,
    "childrenIds": Array [],
    "data": Object {
      "a": 1,
      "b": 2,
    },
    "dialogData": undefined,
    "dialogOpen": false,
    "disposed": false,
    "drawerData": undefined,
    "drawerOpen": false,
    "error": false,
    "fetching": false,
    "hasRemoteData": true,
    "id": "1",
    "initedAt": 0,
    "initializing": false,
    "loadingVisible": true,
    "msg": "",
    "parentId": "",
    "path": "",
    "pristine": Object {
      "a": 1,
      "b": 2,
    },
    "saving": false,
    "schema": null,
    "schemaKey": "",
    "storeType": "ServiceStore",
  },
]
`;
